<resources>
    <string name="app_name">Covid19</string>

    <string name="title_dashboard">Home</string>
    <string name="title_globe">Global</string>
    <string name="title_explore">Explore</string>
    <string name="title_information">Info</string>

    <string name="caption_home">All you need\nis stay at home.</string>
    <string name="caption_explore">Explore news\nAbout Covid-19.</string>
    <string name="caption_info">Get to know\nAbout Covid-19.</string>
    <string name="caption_detail">Don\'t forget to\nuse a mask.</string>
    <string name="dash">-</string>

    <string name="text_h1_home">Case Update in Indonesia</string>
    <string name="text_h2_home">Total case in Indonesia today</string>
    <string name="text_h3_home">See details</string>

    <string name="statistic_confirmed">Confirmed</string>
    <string name="statistic_death">Deaths</string>
    <string name="statistic_recovered">Recovered</string>

    <string name="text_h1_explore">Top Headlines</string>

    <string name="text_h1_info">Symptoms</string>
    <string name="text_h2_info">Prevention</string>
    <string name="text_h3_info">Feel you have symptoms?</string>
    <string name="desc">Symptoms may appear\n2–14 days after exposure</string>

    <string name="text_h1_detail">Case Update</string>
    <string name="text_h2_detail">The most recent case of COVID-19 in\nthe Indonesian Provinces.</string>
    <string name="item_province">Province</string>
</resources>
