<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginStart="12dp"
    android:layout_marginEnd="12dp"
    android:orientation="vertical"
    app:cardCornerRadius="20dp"
    app:cardElevation="4dp"
    app:cardMaxElevation="4dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/item_province"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_light"
            android:text="@string/item_province"
            android:textColor="@color/textGray"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_province"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_bold"
            android:textColor="@color/textGray"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_province"
            tools:text="DKI Jakarta" />

        <View
            android:id="@+id/view2"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_death"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_province" />

        <View
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:background="@drawable/bg_stroke_death"
            app:layout_constraintBottom_toBottomOf="@id/view2"
            app:layout_constraintEnd_toEndOf="@+id/view2"
            app:layout_constraintStart_toStartOf="@+id/view2"
            app:layout_constraintTop_toTopOf="@+id/view2" />

        <View
            android:id="@+id/view3"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_confirmed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_province" />

        <View
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:background="@drawable/bg_stroke_confirmed"
            app:layout_constraintBottom_toBottomOf="@id/view3"
            app:layout_constraintEnd_toEndOf="@+id/view3"
            app:layout_constraintStart_toStartOf="@+id/view3"
            app:layout_constraintTop_toTopOf="@+id/view3" />

        <View
            android:id="@+id/view4"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="44dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_recovered"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_province" />

        <View
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:background="@drawable/bg_stroke_recovered"
            app:layout_constraintBottom_toBottomOf="@id/view4"
            app:layout_constraintEnd_toEndOf="@+id/view4"
            app:layout_constraintStart_toStartOf="@+id/view4"
            app:layout_constraintTop_toTopOf="@+id/view4" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_deaths_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/open_sans_bold"
            android:textColor="@color/textDeath"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/view2"
            app:layout_constraintStart_toStartOf="@+id/view2"
            app:layout_constraintTop_toBottomOf="@+id/view2"
            android:text="@string/dash" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_confirmed_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16sp"
            android:fontFamily="@font/open_sans_bold"
            android:textColor="@color/textConfirmed"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/view3"
            app:layout_constraintStart_toStartOf="@+id/view3"
            app:layout_constraintTop_toBottomOf="@+id/view3"
            android:text="@string/dash" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_recovered_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16sp"
            android:fontFamily="@font/open_sans_bold"
            android:textColor="@color/textRecovered"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/view4"
            app:layout_constraintStart_toStartOf="@+id/view4"
            app:layout_constraintTop_toBottomOf="@+id/view4"
            android:text="@string/dash" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/open_sans"
            android:text="@string/statistic_death"
            android:textColor="@color/textGray"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/text_deaths_home"
            app:layout_constraintStart_toStartOf="@+id/text_deaths_home"
            app:layout_constraintTop_toBottomOf="@+id/text_deaths_home" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/open_sans"
            android:text="@string/statistic_confirmed"
            android:textColor="@color/textGray"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/text_confirmed_home"
            app:layout_constraintStart_toStartOf="@+id/text_confirmed_home"
            app:layout_constraintTop_toBottomOf="@+id/text_confirmed_home" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/open_sans"
            android:text="@string/statistic_recovered"
            android:textColor="@color/textGray"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/text_recovered_home"
            app:layout_constraintStart_toStartOf="@+id/text_recovered_home"
            app:layout_constraintTop_toBottomOf="@+id/text_recovered_home" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>