<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/viewParent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.global.GlobalFragment">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:visibility="gone"
        app:cardCornerRadius="10dp"
        app:contentPadding="10dp"
        app:layout_constraintBottom_toTopOf="@id/cardInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_map" />

            <TextView
                android:id="@+id/textLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/open_sans_bold"
                android:textColor="@color/colorUnselected"
                android:textSize="16sp"
                tools:text="Indonesia"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="22dp"
        android:layout_marginEnd="12dp"
        android:orientation="vertical"
        app:cardCornerRadius="20dp"
        app:cardElevation="4dp"
        app:cardMaxElevation="4dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/view2"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_death"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:background="@drawable/bg_stroke_death"
                app:layout_constraintBottom_toBottomOf="@id/view2"
                app:layout_constraintEnd_toEndOf="@+id/view2"
                app:layout_constraintStart_toStartOf="@+id/view2"
                app:layout_constraintTop_toTopOf="@+id/view2" />

            <View
                android:id="@+id/view3"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="44dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_confirmed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:background="@drawable/bg_stroke_confirmed"
                app:layout_constraintBottom_toBottomOf="@id/view3"
                app:layout_constraintEnd_toEndOf="@+id/view3"
                app:layout_constraintStart_toStartOf="@+id/view3"
                app:layout_constraintTop_toTopOf="@+id/view3" />

            <View
                android:id="@+id/view4"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="44dp"
                android:background="@drawable/bg_recovered"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:background="@drawable/bg_stroke_recovered"
                app:layout_constraintBottom_toBottomOf="@id/view4"
                app:layout_constraintEnd_toEndOf="@+id/view4"
                app:layout_constraintStart_toStartOf="@+id/view4"
                app:layout_constraintTop_toTopOf="@+id/view4" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_deaths_global"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/dash"
                android:textColor="@color/textDeath"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="@+id/view2"
                app:layout_constraintStart_toStartOf="@+id/view2"
                app:layout_constraintTop_toBottomOf="@+id/view2" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_confirmed_global"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16sp"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/dash"
                android:textColor="@color/textConfirmed"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="@+id/view3"
                app:layout_constraintStart_toStartOf="@+id/view3"
                app:layout_constraintTop_toBottomOf="@+id/view3" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_recovered_global"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16sp"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/dash"
                android:textColor="@color/textRecovered"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="@+id/view4"
                app:layout_constraintStart_toStartOf="@+id/view4"
                app:layout_constraintTop_toBottomOf="@+id/view4" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/open_sans"
                android:text="@string/statistic_death"
                android:textColor="@color/textGray"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/text_deaths_global"
                app:layout_constraintStart_toStartOf="@+id/text_deaths_global"
                app:layout_constraintTop_toBottomOf="@+id/text_deaths_global" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/open_sans"
                android:text="@string/statistic_confirmed"
                android:textColor="@color/textGray"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/text_confirmed_global"
                app:layout_constraintStart_toStartOf="@+id/text_confirmed_global"
                app:layout_constraintTop_toBottomOf="@+id/text_confirmed_global" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/open_sans"
                android:text="@string/statistic_recovered"
                android:textColor="@color/textGray"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/text_recovered_global"
                app:layout_constraintStart_toStartOf="@+id/text_recovered_global"
                app:layout_constraintTop_toBottomOf="@+id/text_recovered_global" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>